@@ -25,6 +25,54 @@ class UserServiceTest {
     }
 
     @Test
+    @DisplayName("Register and Get User")
+    void registerAndGetUser() {
+        userService.register("john_doe", "john@example.com", "secret123");
+
+        List<User> users = userService.listUsers(null);
+        assertThat(users).hasSize(1);
+
+        User user = users.getFirst();
+        assertThat(user.getUsername()).isEqualTo("john_doe");
+        assertThat(user.getIsActive()).isTrue();
+        assertThat(userService.getUser(user.getId())).isNotNull();
+    }
+
+    @Test
+    @DisplayName("Search Users")
+    void listUsersSearch() {
+        userService.register("alice", "alice@mail.com", "pass");
+        userService.register("bob", "bob@mail.com", "pass");
+
+        List<User> result = userService.listUsers("alice");
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().getUsername()).isEqualTo("alice");
+    }
+
+    @Test
+    @DisplayName("Update Profile")
+    void updateProfile() {
+        userService.register("temp", "temp@mail.com", "pass");
+        Long userId = userService.listUsers(null).getFirst().getId();
+
+        userService.updateProfile(userId, "new_name", "new@mail.com");
+
+        User updated = userService.getUser(userId);
+        assertThat(updated.getUsername()).isEqualTo("new_name");
+        assertThat(updated.getEmail()).isEqualTo("new@mail.com");
+    }
+
+    @Test
+    @DisplayName("Deactivate User")
+    void deactivateUser() {
+        userService.register("active_user", "email", "pass");
+        Long userId = userService.listUsers(null).getFirst().getId();
+
+        userService.deactivateUser(userId);
+        assertThat(userService.getUser(userId).getIsActive()).isFalse();
+    }
+
+    @Test
     @DisplayName("Assign Role")
     void assignRole() {
         boolean result = userService.assignRole(1, 100);
@@ -40,7 +88,7 @@ class UserServiceTest {
         List<User> users = userService.listUsers(null);
         assertThat(users).hasSize(1);
 
-        User user = users.get(0);
+        User user = users.getFirst();
         assertThat(user.getUsername()).isEqualTo("john_doe");
         assertThat(user.getIsActive()).isTrue();
 
@@ -55,7 +103,6 @@ class UserServiceTest {
 
         boolean isRegistered = userService.register("second", "dup@test.com", "pass");
 
-        System.out.println(isRegistered + " " + userService.listUsers(""));
         assertThat(isRegistered).isFalse();
         assertThat(userService.listUsers(null)).hasSize(1);
     }
@@ -69,7 +116,7 @@ class UserServiceTest {
 
         List<User> result = userService.listUsers("alice");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUsername()).isEqualTo("alice");
+        assertThat(result.getFirst().getUsername()).isEqualTo("alice");
 
         assertThat(userService.listUsers("zorro")).isEmpty();
     }
@@ -78,7 +125,7 @@ class UserServiceTest {
     @DisplayName("Update Profile")
     void updateProfile() {
         userService.register("temp", "temp@mail.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
+        Long userId = userService.listUsers(null).getFirst().getId();
 
         userService.updateProfile(userId, "new_name", "new@mail.com");
 
@@ -91,7 +138,7 @@ class UserServiceTest {
     @DisplayName("Deactivate User")
     void deactivateUser() {
         userService.register("active_user", "email@test.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
+        Long userId = userService.listUsers(null).getFirst().getId();
 
         boolean isDeactivated = userService.deactivateUser(userId);
 
@@ -103,8 +150,8 @@ class UserServiceTest {
     @DisplayName("Roles Logic: Assign and Remove")
     void rolesLogic() {
         userService.register("role_user", "role@test.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
-        Integer roleId = 100;
+        Long userId = userService.listUsers(null).getFirst().getId();
+        Long roleId = 100;
 
         boolean assigned = userService.assignRole(userId, roleId);
         assertThat(assigned).isTrue();
